cmake_minimum_required(VERSION 3.28)
project(c__Interview)

set(CMAKE_CXX_STANDARD 17)

add_executable(c__Interview
        precision.cpp
        precision.cpp
        TempFormat.cpp
        TempFormat.cpp
        TempFormat.cpp
        TempFormat.cpp
        DelayTillYouHaveTo.h
        Matrix.cpp
        Matrix.h
        OBject.cpp
        OBject.h)
